// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test view of pagination center 1`] = `
<DocumentFragment>
  <div
    class="pagination"
  >
    <div
      class="row row_jc-c row_ai-c "
    >
      <button
        class="button default-button primary-button"
      >
        &lt;
      </button>
      <a
        class=""
        href="/admin/posts/4"
      >
        4
      </a>
      <a
        class="selected-page"
        href="/admin/posts/5"
      >
        5
      </a>
      <a
        class=""
        href="/admin/posts/6"
      >
        6
      </a>
      <button
        class="button default-button primary-button"
      >
        &gt;
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test view of pagination first 1`] = `
<DocumentFragment>
  <div
    class="pagination"
  >
    <div
      class="row row_jc-c row_ai-c "
    >
      <a
        class="selected-page"
        href="/admin/posts/1"
      >
        1
      </a>
      <a
        class=""
        href="/admin/posts/2"
      >
        2
      </a>
      <a
        class=""
        href="/admin/posts/3"
      >
        3
      </a>
      <a
        class=""
        href="/admin/posts/4"
      >
        4
      </a>
      <a
        class=""
        href="/admin/posts/5"
      >
        5
      </a>
      <button
        class="button default-button primary-button"
      >
        &gt;
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test view of pagination last page 1`] = `
<DocumentFragment>
  <div
    class="pagination"
  >
    <div
      class="row row_jc-c row_ai-c "
    >
      <button
        class="button default-button primary-button"
      >
        &lt;
      </button>
      <a
        class="selected-page"
        href="/admin/posts/10"
      >
        10
      </a>
    </div>
  </div>
</DocumentFragment>
`;
